--- a/DatingApp.API/Properties/launchSettings.json
+++ b/DatingApp.API/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "launchUrl": "weatherforecast",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
