--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -25,6 +25,7 @@
     "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.3.0",
+    "ngx-gallery-9": "^1.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
