--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName":"dtsqgrfuz",
+    "ApiKey": "339526676789268",
+    "ApiSecret":"pFXasz_d1pHTCJafOGzdmU27Em0"
+  }
 }
